--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,11 @@
       {
         "src": "config/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.13" }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles"
+        "config": { 
+          "maxLambdaSize": "15mb", 
+          "runtime": "python3.13",
+          "installCommand": "pip install -r requirements.txt",
+          "buildCommand": "python manage.py collectstatic --noinput"
         }
       }
     ],
