--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
           "maxLambdaSize": "15mb", 
           "runtime": "python3.13",
           "installCommand": "pip install -r requirements.txt",
-          "buildCommand": "python manage.py collectstatic --noinput"
+          "buildCommand": "python manage.py migrate --noinput && python manage.py collectstatic --noinput"
         }
       }
     ],
